# code-trainer

./: .gitignore  SETUP.md  docker-compose.prod.yml
backend/: .env.example  .gitignore  algo_syntax_course.json  cleanup.txt  diag.txt  diag2.txt  docker-compose.yml  final_report.txt  final_validate.txt  main.py  merge_report.txt  pascal_full_seed.json  pascal_seed.json  pyproject.toml  repair2.txt  repair3.txt  repair4.txt  repair5.txt  repair6.txt  repair7.txt  repair_dry.txt  repair_run.txt  restore1.json  restore2.json  restore3.json  restore4.txt  restore5.txt  restore_pascal.txt  restore_report.txt  smoke2.json  smoke_final.json  smoke_out.json  ucr.json  validate.txt  validate2.txt  validate3.txt  validate5.txt
backend/alembic/: env.py
backend/deploy/: .env.dev.example  .env.prod.example  docker-compose.dev.override.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.runners-build.yml
backend/docker/: Dockerfile.api  Dockerfile.cpp  Dockerfile.csharp  Dockerfile.java  Dockerfile.pascal  Dockerfile.python  Dockerfile.worker
backend/languages/: cpp.yml  csharp.yml  java.yml  pascal.yml
backend/resources/: concepts.yml  construction_hints.json  recommendation_metadata.json
backend/scripts/: _audit_068_semantics.py  _audit_assembly_blocks.py  _audit_ch2_concepts.py  _audit_ch3.py  _audit_ch3_out.txt  _audit_ch4.py  _audit_ch5.py  _audit_chapters.json  _audit_docx.py  _audit_expected_concepts.py  _audit_reference_format.py  _audit_task214.py  _bucket_c_audit_readonly.py  _bucket_c_crossvalidate.py  _bucket_c_probe.py  _bucket_c_user_validate.py  _check86.py  _check_ref.py  _check_tc_coverage.py  _check_tc_quality.py  _check_urls.py  (+288 more)
(+1507 files in other folders)
