[tool.poetry]
name = "backend"
version = "0.1.0"
description = "Educational web app"
authors = ["Vlada Maksimova <vladamaximova2003@gmail.com>"]
readme = "README.md"
packages = [
    { include = "api" },
    { include = "application" },
    { include = "domain" },
    { include = "infrastructure" },
    { include = "shared" },
    { include = "worker" },
]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
fastapi = ">=0.118.3,<0.119.0"
uvicorn = ">=0.37.0,<0.38.0"
sqlalchemy = ">=2.0.44,<3.0.0"
psycopg2-binary = ">=2.9.11,<3.0.0"
pydantic = { version = ">=2.12.0,<3.0.0", extras = ["dotenv"] }
python-dotenv = ">=1.1.1,<2.0.0"
ruff = ">=0.14.0,<0.15.0"
pydantic-settings = ">=2.11.0,<3.0.0"
tree-sitter-language-pack = ">=0.10.0,<0.11.0"
dependency-injector = ">=4.48.2,<5.0.0"
path = "^17.1.1"
redis = "^7.2.1"
passlib = ">=1.7.4,<2.0.0"
# Pin <4.1: passlib 1.7.x reads bcrypt.__about__ (removed in bcrypt 4.1+).
bcrypt = ">=4.0.1,<4.1.0"
pyjwt = ">=2.10.1,<3.0.0"
httpx = ">=0.28.0,<0.29.0"
pyyaml = ">=6.0.2,<7.0.0"
alembic = "^1.14.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pytest-asyncio = "^0.24.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]
markers = [
    "integration: hits configured PostgreSQL or HTTP (opt-in with -m integration)",
    "curriculum: course catalog and showcase content regression (opt-in with -m curriculum)",
    "docker: requires Docker executor or warm runners",
]
